<?xml version="1.0"?>
<package>
  <name>ocs2_mobile_manipulator</name>
  <version>0.0.0</version>
  <description>The ocs2_mobile_manipulator package</description>

  <maintainer email="mspieler@ethz.ch">Michael Spieler</maintainer>
  <maintainer email="fperry@ethz.ch">Perry Franklin</maintainer>
  <maintainer email="mittalma@ethz.ch">Mayank Mittal</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <build_depend>ocs2_core</build_depend>
  <build_depend>ocs2_ddp</build_depend>
  <build_depend>ocs2_mpc</build_depend>
  <build_depend>ocs2_robotic_tools</build_depend>
  <build_depend>ocs2_robotic_assets</build_depend>
  <build_depend>ocs2_pinocchio_interface</build_depend>
  <build_depend>ocs2_self_collision</build_depend>
  <build_depend>pinocchio</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
