<?xml version="1.0"?>
<package>
  <name>ocs2_mobile_manipulator_ros</name>
  <version>0.0.0</version>
  <description>The ocs2_mobile_manipulator_ros package</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="mspieler@ethz.ch">Michael Spieler</maintainer>
  <maintainer email="fperry@ethz.ch">Perry Franklin</maintainer>
  <maintainer email="mittalma@ethz.ch">Mayank Mittal</maintainer>

  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ocs2_core</build_depend>
  <build_depend>ocs2_ddp</build_depend>
  <build_depend>ocs2_mpc</build_depend>
  <build_depend>ocs2_robotic_tools</build_depend>
  <build_depend>ocs2_robotic_assets</build_depend>
  <build_depend>ocs2_ros_interfaces</build_depend>
  <build_depend>ocs2_pinocchio_interface</build_depend>
  <build_depend>ocs2_self_collision</build_depend>
  <build_depend>ocs2_self_collision_visualization</build_depend>
  <build_depend>ocs2_mobile_manipulator</build_depend>
  <build_depend>pinocchio</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
